--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 
   <dependencies>
     <dependency>
-        <groupId>javax.cache</groupId>
-        <artifactId>cache-api</artifactId>
-        <version>1.1.1</version>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>31.0.1-jre</version>
     </dependency>
     <dependency>
         <groupId>org.junit.jupiter</groupId>
